/*
   Copyright (c) 2019 AT&T Intellectual Property.
   Copyright (c) 2019 Nokia.

   Licensed under the Creative Commons Attribution 4.0 International
   Public License (the "License"); you may not use this file except
   in compliance with the License. You may obtain a copy of the License at

       https://creativecommons.org/licenses/by/4.0/

   Unless required by applicable law or agreed to in writing, documentation
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
*/

syntax = "proto3";

package streaming_protobufs;

option go_package = "gerrit.o-ran-sc.org/r/ric-plt/streaming-protobufs";

import "rrc_measurement_report.proto";
import "rrc_failure_information.proto";

/*
   Protocol Buffer definition for general RRC message structures
   (3GPP 38.331, ver 15.4.0)

   Naming convention follows the ASN.1 field naming defined in chapter
   '6.2.1 General message structures' of below document:
   http://www.3gpp.org/ftp//Specs/archive/38_series/38.331/38331-f40.zip

   Dashes converted to underscores to make protobuf message syntax correct.
*/


message RRCContainer
{
    UL_DCCH_MessageType UL_DCCH_message = 1;
    /*oneof id_RRCContainer {
        UL_DCCH_MessageType UL_DCCH_message = 1;
        UL_DCCH_MessageType_36331 UL_DCCH_message_36331 = 2;
        DL_DCCH_MessageType_36331 DL_DCCH_message_36331 = 3;
    }*/
}

message UL_DCCH_MessageType
{
    oneof c1 {
        MeasurementReport measurementReport = 1;
        FailureInformation failureInformation = 2;
    }
}
